--- a/public/index.html
+++ b/public/index.html
@@ -5,11 +5,14 @@
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
+    <meta name="description" content="Little Lemon restaurant in Chicago" />
+    <meta name="og:title" content="Little Lemon restaurant" />
     <meta
-      name="description"
-      content="Web site created using create-react-app"
+      name="og:description"
+      content="Small restaurant in Chicago with an order online and table reservation option"
     />
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
+    <meta name="og:image" content="%PUBLIC_URL%/icon_assets/logo.svg" />
+    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo.png" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
